# Sales-Operations-Portal

./: .env  .env.example  .eslintrc.json  .gitignore  ADD_SKU_AND_CASES_TO_TRANSPORT_EXPENSES.sql  ANDROID_BUILD.md  AUTHENTICATION_SETUP.md  CHECK_CUSTOMERS_CONSTRAINTS.sql  CHECK_CUSTOMER_FOREIGN_KEYS.sql  CHECK_DUPLICATE_CUSTOMERS.sql  CHECK_ORDERS_SCHEMA.sql  CHECK_ORDERS_TABLE_SCHEMA.sql  CHECK_SALES_TRANSACTIONS_STRUCTURE.sql  CLAUDE.md  CLEAR_ORDERS_TABLE.sql  CODEBASE_CLEANUP_REPORT.md  CODEBASE_REVIEW_SUMMARY.md  COMPREHENSIVE_CODEBASE_REVIEW_SUMMARY.md  COMPREHENSIVE_CODE_REVIEW.md  CREATE_ORDERS_DISPATCH_TABLE.sql  DATABASE_FIXES_SUMMARY.md  DATABASE_INDEXES_OPTIMIZATION.sql  DEBUG_INSERT_ERROR.sql  DEPLOY_EDGE_FUNCTION.md  DEPLOY_EMAIL_FUNCTIONS.md  DEPLOY_UPDATED_EMAIL_FUNCTIONS.md  EMAIL_NOT_RECEIVED_TROUBLESHOOTING.md  EMAIL_SERVICE_ALTERNATIVES.md  EMAIL_SETUP_GUIDE.md  FIX_CUSTOMERS_UNIQUE_CONSTRAINT.sql  FIX_FACTORY_PRICING_SAFE.sql  FIX_FACTORY_PRICING_SINGLE_RUN.sql  FIX_FACTORY_PRICING_STEP_BY_STEP.sql  FIX_FACTORY_PRICING_TABLE.sql  FIX_N_PLUS_ONE_TRANSPORT_EXPENSES.sql  FIX_ORDERS_RLS.sql  FIX_ORDERS_RLS_SIMPLIFIED.sql  FIX_PRICE_PER_CASE_COLUMN.sql  FIX_RLS_COMPLETE.sql  FIX_RLS_POLICIES.sql  (+57 more)
.claude/: settings.json  settings.local.json
api/: supabase-activity-ping.ts
docs/: CODEBASE_CLEANUP_REPORT.md  CODEBASE_CLEANUP_REPORT_2026.md  MAINTENANCE.md
public/: index.html  (+2 more)
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+696 files in other folders)
