[package]
name    = "aamodha-operations-portal"
version = "1.0.0"
description = "Aamodha Operations Portal — Desktop Application"
authors  = ["Aamodha Enterprises"]
edition  = "2021"

[lib]
name       = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                   = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell      = "2"
tauri-plugin-fs         = "2"
tauri-plugin-dialog     = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater    = "2"
tauri-plugin-process    = "2"
tauri-plugin-os         = "2"
tauri-plugin-store      = "2"
tauri-plugin-single-instance = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Release profile: small, fast, no debug symbols
[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
strip         = true
opt-level     = "s"
